cmake_minimum_required(VERSION 3.7)
project(bacnet_stack)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        demo/abort/main.c
        demo/dcc/main.c
        demo/epics/bacepics.h
        demo/epics/main.c
        demo/error/main.c
        demo/gateway/gateway.h
        demo/gateway/main.c
        demo/getevent/main.c
        demo/handler/dlenv.c
        demo/handler/h_alarm_ack.c
        demo/handler/h_arf.c
        demo/handler/h_arf_a.c
        demo/handler/h_awf.c
        demo/handler/h_bbmd6.c
        demo/handler/h_ccov.c
        demo/handler/h_cov.c
        demo/handler/h_dcc.c
        demo/handler/h_gas_a.c
        demo/handler/h_get_alarm_sum.c
        demo/handler/h_getevent.c
        demo/handler/h_getevent_a.c
        demo/handler/h_iam.c
        demo/handler/h_ihave.c
        demo/handler/h_lso.c
        demo/handler/h_npdu.c
        demo/handler/h_pt.c
        demo/handler/h_pt_a.c
        demo/handler/h_rd.c
        demo/handler/h_routed_npdu.c
        demo/handler/h_rp.c
        demo/handler/h_rp_a.c
        demo/handler/h_rpm.c
        demo/handler/h_rpm_a.c
        demo/handler/h_rr.c
        demo/handler/h_rr_a.c
        demo/handler/h_ts.c
        demo/handler/h_ucov.c
        demo/handler/h_upt.c
        demo/handler/h_whohas.c
        demo/handler/h_whois.c
        demo/handler/h_wp.c
        demo/handler/h_wpm.c
        demo/handler/noserv.c
        demo/handler/objects.c
        demo/handler/s_abort.c
        demo/handler/s_ack_alarm.c
        demo/handler/s_arfs.c
        demo/handler/s_awfs.c
        demo/handler/s_cevent.c
        demo/handler/s_cov.c
        demo/handler/s_dcc.c
        demo/handler/s_error.c
        demo/handler/s_get_alarm_sum.c
        demo/handler/s_get_event.c
        demo/handler/s_getevent.c
        demo/handler/s_iam.c
        demo/handler/s_ihave.c
        demo/handler/s_lso.c
        demo/handler/s_ptransfer.c
        demo/handler/s_rd.c
        demo/handler/s_readrange.c
        demo/handler/s_router.c
        demo/handler/s_rp.c
        demo/handler/s_rpm.c
        demo/handler/s_ts.c
        demo/handler/s_uevent.c
        demo/handler/s_upt.c
        demo/handler/s_whohas.c
        demo/handler/s_whois.c
        demo/handler/s_wp.c
        demo/handler/s_wpm.c
        demo/handler/txbuf.c
        demo/iam/main.c
        demo/iamrouter/main.c
        demo/initrouter/main.c
        demo/mstpcap/main.c
        demo/mstpcrc/main.c
        demo/object/access_credential.c
        demo/object/access_credential.h
        demo/object/access_door.c
        demo/object/access_door.h
        demo/object/access_point.c
        demo/object/access_point.h
        demo/object/access_rights.c
        demo/object/access_rights.h
        demo/object/access_user.c
        demo/object/access_user.h
        demo/object/access_zone.c
        demo/object/access_zone.h
        demo/object/ai.c
        demo/object/ai.h
        demo/object/ao.c
        demo/object/ao.h
        demo/object/av.c
        demo/object/av.h
        demo/object/bacfile.c
        demo/object/bacfile.h
        demo/object/bi.c
        demo/object/bi.h
        demo/object/bo.c
        demo/object/bo.h
        demo/object/bv.c
        demo/object/bv.h
        demo/object/channel.c
        demo/object/channel.h
        demo/object/command.c
        demo/object/command.h
        demo/object/credential_data_input.c
        demo/object/credential_data_input.h
        demo/object/csv.c
        demo/object/csv.h
        demo/object/device-client.c
        demo/object/device.c
        demo/object/device.h
        demo/object/gw_device.c
        demo/object/iv.c
        demo/object/iv.h
        demo/object/lc.c
        demo/object/lc.h
        demo/object/lo.c
        demo/object/lo.h
        demo/object/lsp.c
        demo/object/lsp.h
        demo/object/ms-input.c
        demo/object/ms-input.h
        demo/object/mso.c
        demo/object/mso.h
        demo/object/msv.c
        demo/object/msv.h
        demo/object/nc.c
        demo/object/nc.h
        demo/object/osv.c
        demo/object/osv.h
        demo/object/piv.c
        demo/object/piv.h
        demo/object/schedule.c
        demo/object/schedule.h
        demo/object/trendlog.c
        demo/object/trendlog.h
        demo/perl/perl_bindings.c
        demo/piface/device.c
        demo/piface/main.c
        demo/ptransfer/main.c
        demo/readbdt/main.c
        demo/readfile/main.c
        demo/readprop/main.c
        demo/readpropm/main.c
        demo/readrange/main.c
        demo/reinit/main.c
        demo/router/ipmodule.c
        demo/router/ipmodule.h
        demo/router/main.c
        demo/router/msgqueue.c
        demo/router/msgqueue.h
        demo/router/mstpmodule.c
        demo/router/mstpmodule.h
        demo/router/network_layer.c
        demo/router/network_layer.h
        demo/router/portthread.c
        demo/router/portthread.h
        demo/router-ipv6/main.c
        demo/scov/main.c
        demo/server/main.c
        demo/server/server.h
        demo/timesync/main.c
        demo/ucov/main.c
        demo/uevent/main.c
        demo/uptransfer/main.c
        demo/whohas/main.c
        demo/whois/main.c
        demo/whoisrouter/main.c
        demo/writefile/main.c
        demo/writeprop/main.c
        include/abort.h
        include/access_rule.h
        include/address.h
        include/alarm_ack.h
        include/apdu.h
        include/arcnet.h
        include/arf.h
        include/assigned_access_rights.h
        include/authentication_factor.h
        include/authentication_factor_format.h
        include/awf.h
        include/bacaddr.h
        include/bacapp.h
        include/bacdcode.h
        include/bacdef.h
        include/bacdevobjpropref.h
        include/bacenum.h
        include/bacerror.h
        include/bacint.h
        include/bacnet.h
        include/bacprop.h
        include/bacpropstates.h
        include/bacreal.h
        include/bacsec.h
        include/bacstr.h
        include/bactext.h
        include/bactimevalue.h
        include/bigend.h
        include/bip.h
        include/bip6.h
        include/bits.h
        include/bvlc.h
        include/bvlc6.h
        include/bytes.h
        include/client.h
        include/config.h
        include/cov.h
        include/crc.h
        include/credential_authentication_factor.h
        include/datalink.h
        include/datetime.h
        include/dcc.h
        include/debug.h
        include/dlenv.h
        include/dlmstp.h
        include/ethernet.h
        include/event.h
        include/fifo.h
        include/filename.h
        include/get_alarm_sum.h
        include/getevent.h
        include/handlers.h
        include/iam.h
        include/ihave.h
        include/indtext.h
        include/key.h
        include/keylist.h
        include/lighting.h
        include/lso.h
        include/memcopy.h
        include/mstp.h
        include/mstpdef.h
        include/mstptext.h
        include/mydata.h
        include/npdu.h
        include/objects.h
        include/proplist.h
        include/ptransfer.h
        include/rd.h
        include/readrange.h
        include/reject.h
        include/ringbuf.h
        include/rp.h
        include/rpm.h
        include/sbuf.h
        include/timestamp.h
        include/timesync.h
        include/tsm.h
        include/txbuf.h
        include/ucix.h
        include/version.h
        include/vmac.h
        include/whohas.h
        include/whois.h
        include/wp.h
        include/wpm.h
        lib/main.cpp
        lib/main.h
        ports/arduino_uno/external/Arduino/core/include/Arduino.h
        ports/arduino_uno/external/Arduino/core/include/binary.h
        ports/arduino_uno/external/Arduino/core/include/HardwareSerial.h
        ports/arduino_uno/external/Arduino/core/include/new.h
        ports/arduino_uno/external/Arduino/core/include/pins_arduino.h
        ports/arduino_uno/external/Arduino/core/include/Server.h
        ports/arduino_uno/external/Arduino/core/include/Udp.h
        ports/arduino_uno/external/Arduino/core/include/USBAPI.h
        ports/arduino_uno/external/Arduino/core/include/USBCore.h
        ports/arduino_uno/external/Arduino/core/include/wiring_private.h
        ports/arduino_uno/external/Arduino/Ethernet/include/SPI.h
        ports/arduino_uno/external/Arduino/Ethernet/include/util.h
        ports/arduino_uno/external/Arduino/Ethernet/include/w5100.h
        ports/arduino_uno/external/Arduino/Ethernet/include/w5100Wrapper.h
        ports/arduino_uno/external/Arduino/Ethernet/src/socket.cpp
        ports/arduino_uno/external/Arduino/Ethernet/src/SPI.cpp
        ports/arduino_uno/external/Arduino/Ethernet/src/w5100.cpp
        ports/arduino_uno/external/Arduino/Ethernet/src/w5100Wrapper.cpp
        ports/arduino_uno/apdu.c
        ports/arduino_uno/av.c
        ports/arduino_uno/av.h
        ports/arduino_uno/bip-init.c
        ports/arduino_uno/bip.c
        ports/arduino_uno/bv.c
        ports/arduino_uno/bv.h
        ports/arduino_uno/bvlc-arduino.c
        ports/arduino_uno/bvlc-arduino.h
        ports/arduino_uno/datalink.h
        ports/arduino_uno/device.h
        ports/arduino_uno/h_whois.c
        ports/arduino_uno/h_wp.c
        ports/arduino_uno/main.c
        ports/arduino_uno/stdbool.h
        ports/arduino_uno/stdint.h
        ports/arduino_uno/txbuf.h
        ports/arm7/_stdint.h
        ports/arm7/bip.c
        ports/arm7/net.h
        ports/arm7/stdbool.h
        ports/at91sam7s/ai.c
        ports/at91sam7s/at91sam7s256.h
        ports/at91sam7s/av.c
        ports/at91sam7s/bi.c
        ports/at91sam7s/blinker.c
        ports/at91sam7s/board.h
        ports/at91sam7s/bv.c
        ports/at91sam7s/device.c
        ports/at91sam7s/dlmstp.c
        ports/at91sam7s/init.c
        ports/at91sam7s/irq.c
        ports/at91sam7s/isr.c
        ports/at91sam7s/isr.h
        ports/at91sam7s/main.c
        ports/at91sam7s/rs485.c
        ports/at91sam7s/rs485.h
        ports/at91sam7s/timer.c
        ports/at91sam7s/timer.h
        ports/atmega168/ai.c
        ports/atmega168/ai.h
        ports/atmega168/apdu.c
        ports/atmega168/av.c
        ports/atmega168/av.h
        ports/atmega168/avr035.h
        ports/atmega168/bv.c
        ports/atmega168/bv.h
        ports/atmega168/device.c
        ports/atmega168/device.h
        ports/atmega168/dlmstp.c
        ports/atmega168/h_rp.c
        ports/atmega168/h_whois.c
        ports/atmega168/h_wp.c
        ports/atmega168/hardware.h
        ports/atmega168/iar2gcc.h
        ports/atmega168/main.c
        ports/atmega168/rs485.c
        ports/atmega168/rs485.h
        ports/atmega168/stack.c
        ports/atmega168/stack.h
        ports/atmega168/stdbool.h
        ports/atmega168/stdint.h
        ports/atmega168/timer.c
        ports/atmega168/timer.h
        ports/atmega8/apdu.c
        ports/atmega8/avr035.h
        ports/atmega8/device.c
        ports/atmega8/dlmstp.c
        ports/atmega8/hardware.h
        ports/atmega8/iar2gcc.h
        ports/atmega8/main.c
        ports/atmega8/rs485.c
        ports/atmega8/rs485.h
        ports/atmega8/stdbool.h
        ports/atmega8/stdint.h
        ports/atmega8/timer.c
        ports/atmega8/timer.h
        ports/bdk-atxx4-mstp/avrosp/AVRBootloader.cpp
        ports/bdk-atxx4-mstp/avrosp/AVRBootloader.hpp
        ports/bdk-atxx4-mstp/avrosp/AVRDevice.cpp
        ports/bdk-atxx4-mstp/avrosp/AVRDevice.hpp
        ports/bdk-atxx4-mstp/avrosp/AVRInSystemProg.cpp
        ports/bdk-atxx4-mstp/avrosp/AVRInSystemProg.hpp
        ports/bdk-atxx4-mstp/avrosp/AVRProgrammer.cpp
        ports/bdk-atxx4-mstp/avrosp/AVRProgrammer.hpp
        ports/bdk-atxx4-mstp/avrosp/CommChannel.cpp
        ports/bdk-atxx4-mstp/avrosp/CommChannel.hpp
        ports/bdk-atxx4-mstp/avrosp/ErrorMsg.cpp
        ports/bdk-atxx4-mstp/avrosp/ErrorMsg.hpp
        ports/bdk-atxx4-mstp/avrosp/HEXParser.cpp
        ports/bdk-atxx4-mstp/avrosp/HEXParser.hpp
        ports/bdk-atxx4-mstp/avrosp/JobInfo.cpp
        ports/bdk-atxx4-mstp/avrosp/JobInfo.hpp
        ports/bdk-atxx4-mstp/avrosp/main.cpp
        ports/bdk-atxx4-mstp/avrosp/SerialPort.cpp
        ports/bdk-atxx4-mstp/avrosp/SerialPort.hpp
        ports/bdk-atxx4-mstp/avrosp/Utility.cpp
        ports/bdk-atxx4-mstp/avrosp/Utility.hpp
        ports/bdk-atxx4-mstp/avrosp/XMLParser.cpp
        ports/bdk-atxx4-mstp/avrosp/XMLParser.hpp
        ports/bdk-atxx4-mstp/bootloader/defines.h
        ports/bdk-atxx4-mstp/bootloader/flash.h
        ports/bdk-atxx4-mstp/bootloader/main.c
        ports/bdk-atxx4-mstp/bootloader/serial.c
        ports/bdk-atxx4-mstp/bootloader/serial.h
        ports/bdk-atxx4-mstp/crossworks/stdbool.h
        ports/bdk-atxx4-mstp/adc-block.c
        ports/bdk-atxx4-mstp/adc.c
        ports/bdk-atxx4-mstp/adc.h
        ports/bdk-atxx4-mstp/ai.c
        ports/bdk-atxx4-mstp/av.c
        ports/bdk-atxx4-mstp/bacnet.c
        ports/bdk-atxx4-mstp/bacnet.h
        ports/bdk-atxx4-mstp/bi.c
        ports/bdk-atxx4-mstp/bname.c
        ports/bdk-atxx4-mstp/bname.h
        ports/bdk-atxx4-mstp/bo.c
        ports/bdk-atxx4-mstp/device.c
        ports/bdk-atxx4-mstp/dlmstp.c
        ports/bdk-atxx4-mstp/eeprom.c
        ports/bdk-atxx4-mstp/eeprom.h
        ports/bdk-atxx4-mstp/fuses.c
        ports/bdk-atxx4-mstp/hardware.h
        ports/bdk-atxx4-mstp/iar2gcc.h
        ports/bdk-atxx4-mstp/init.c
        ports/bdk-atxx4-mstp/init.h
        ports/bdk-atxx4-mstp/input.c
        ports/bdk-atxx4-mstp/input.h
        ports/bdk-atxx4-mstp/led.c
        ports/bdk-atxx4-mstp/led.h
        ports/bdk-atxx4-mstp/main.c
        ports/bdk-atxx4-mstp/nvdata.h
        ports/bdk-atxx4-mstp/rs485.c
        ports/bdk-atxx4-mstp/rs485.h
        ports/bdk-atxx4-mstp/seeprom.c
        ports/bdk-atxx4-mstp/seeprom.h
        ports/bdk-atxx4-mstp/serial.c
        ports/bdk-atxx4-mstp/serial.h
        ports/bdk-atxx4-mstp/stack.c
        ports/bdk-atxx4-mstp/stack.h
        ports/bdk-atxx4-mstp/test.c
        ports/bdk-atxx4-mstp/test.h
        ports/bdk-atxx4-mstp/timer.c
        ports/bdk-atxx4-mstp/timer.h
        ports/bdk-atxx4-mstp/timer2.c
        ports/bdk-atxx4-mstp/watchdog.c
        ports/bdk-atxx4-mstp/watchdog.h
        ports/bsd/bip-init.c
        ports/bsd/main.c
        ports/bsd/net.h
        ports/bsd/stdbool.h
        ports/bsd/timer.c
        ports/bsd/timer.h
        ports/dos/dlmstp.c
        ports/dos/extkword.h
        ports/dos/main.c
        ports/dos/mk_fp.h
        ports/dos/pchwio.c
        ports/dos/pchwio.h
        ports/dos/queue.c
        ports/dos/queue.h
        ports/dos/rs485.c
        ports/dos/rs485.h
        ports/dos/serial.c
        ports/dos/serial.h
        ports/dos/stdbool.h
        ports/dos/stdint.h
        ports/dos/timer.c
        ports/dos/timer.h
        ports/linux/arcnet.c
        ports/linux/bacsec_linux.c
        ports/linux/bip-init.c
        ports/linux/bip6.c
        ports/linux/dlmstp.c
        ports/linux/dlmstp_linux.c
        ports/linux/dlmstp_linux.h
        ports/linux/ethernet.c
        ports/linux/mstpsnap.c
        ports/linux/net.h
        ports/linux/rs485.c
        ports/linux/rs485.h
        ports/linux/rx_fsm.c
        ports/linux/timer.c
        ports/linux/timer.h
        ports/lwip/bip.c
        ports/lwip/net.h
        ports/pic18f6720/ai.c
        ports/pic18f6720/apdu.c
        ports/pic18f6720/av.c
        ports/pic18f6720/bi.c
        ports/pic18f6720/bv.c
        ports/pic18f6720/device.c
        ports/pic18f6720/dlmstp.c
        ports/pic18f6720/dlmstp.h
        ports/pic18f6720/hardware.h
        ports/pic18f6720/isr.c
        ports/pic18f6720/main.c
        ports/pic18f6720/mstp.c
        ports/pic18f6720/mstp.h
        ports/pic18f6720/rs485.c
        ports/pic18f6720/rs485.h
        ports/pic18f6720/stdbool.h
        ports/pic18f6720/stdint.h
        ports/pic18f97j60/ai.c
        ports/pic18f97j60/apdu.c
        ports/pic18f97j60/av.c
        ports/pic18f97j60/bi.c
        ports/pic18f97j60/bv.c
        ports/pic18f97j60/device.c
        ports/pic18f97j60/dlmstp.c
        ports/pic18f97j60/dlmstp.h
        ports/pic18f97j60/hardware.h
        ports/pic18f97j60/isr.c
        ports/pic18f97j60/main.c
        ports/pic18f97j60/mstp.c
        ports/pic18f97j60/mstp.h
        ports/pic18f97j60/rs485.c
        ports/pic18f97j60/rs485.h
        ports/pic18f97j60/stdbool.h
        ports/pic18f97j60/stdint.h
        ports/rtos32/bip-init.c
        ports/rtos32/dlmstp.c
        ports/rtos32/ethernet.c
        ports/rtos32/init.c
        ports/rtos32/main.c
        ports/rtos32/mstp.c
        ports/rtos32/mstp.h
        ports/rtos32/net.h
        ports/rtos32/netcfg.h
        ports/rtos32/rs485.c
        ports/rtos32/rs485.h
        ports/rtos32/stdbool.h
        ports/rtos32/stdint.h
        ports/rx62n/bacnet.c
        ports/rx62n/bacnet.h
        ports/rx62n/bo.c
        ports/rx62n/device.c
        ports/rx62n/ethernet.c
        ports/rx62n/hardware.h
        ports/rx62n/led.c
        ports/rx62n/led.h
        ports/rx62n/main.c
        ports/rx62n/timer-hdw.c
        ports/rx62n/timer.c
        ports/rx62n/timer.h
        ports/stm32f10x/CMSIS/core_cm3.c
        ports/stm32f10x/CMSIS/core_cm3.h
        ports/stm32f10x/CMSIS/stm32f10x.h
        ports/stm32f10x/CMSIS/system_stm32f10x.h
        ports/stm32f10x/drivers/inc/stm32f10x_adc.h
        ports/stm32f10x/drivers/inc/stm32f10x_bkp.h
        ports/stm32f10x/drivers/inc/stm32f10x_can.h
        ports/stm32f10x/drivers/inc/stm32f10x_cec.h
        ports/stm32f10x/drivers/inc/stm32f10x_crc.h
        ports/stm32f10x/drivers/inc/stm32f10x_dac.h
        ports/stm32f10x/drivers/inc/stm32f10x_dbgmcu.h
        ports/stm32f10x/drivers/inc/stm32f10x_dma.h
        ports/stm32f10x/drivers/inc/stm32f10x_exti.h
        ports/stm32f10x/drivers/inc/stm32f10x_flash.h
        ports/stm32f10x/drivers/inc/stm32f10x_fsmc.h
        ports/stm32f10x/drivers/inc/stm32f10x_gpio.h
        ports/stm32f10x/drivers/inc/stm32f10x_i2c.h
        ports/stm32f10x/drivers/inc/stm32f10x_iwdg.h
        ports/stm32f10x/drivers/inc/stm32f10x_misc.h
        ports/stm32f10x/drivers/inc/stm32f10x_pwr.h
        ports/stm32f10x/drivers/inc/stm32f10x_rcc.h
        ports/stm32f10x/drivers/inc/stm32f10x_rtc.h
        ports/stm32f10x/drivers/inc/stm32f10x_sdio.h
        ports/stm32f10x/drivers/inc/stm32f10x_spi.h
        ports/stm32f10x/drivers/inc/stm32f10x_tim.h
        ports/stm32f10x/drivers/inc/stm32f10x_usart.h
        ports/stm32f10x/drivers/inc/stm32f10x_wwdg.h
        ports/stm32f10x/drivers/src/stm32f10x_adc.c
        ports/stm32f10x/drivers/src/stm32f10x_bkp.c
        ports/stm32f10x/drivers/src/stm32f10x_can.c
        ports/stm32f10x/drivers/src/stm32f10x_cec.c
        ports/stm32f10x/drivers/src/stm32f10x_crc.c
        ports/stm32f10x/drivers/src/stm32f10x_dac.c
        ports/stm32f10x/drivers/src/stm32f10x_dbgmcu.c
        ports/stm32f10x/drivers/src/stm32f10x_dma.c
        ports/stm32f10x/drivers/src/stm32f10x_exti.c
        ports/stm32f10x/drivers/src/stm32f10x_flash.c
        ports/stm32f10x/drivers/src/stm32f10x_fsmc.c
        ports/stm32f10x/drivers/src/stm32f10x_gpio.c
        ports/stm32f10x/drivers/src/stm32f10x_i2c.c
        ports/stm32f10x/drivers/src/stm32f10x_iwdg.c
        ports/stm32f10x/drivers/src/stm32f10x_misc.c
        ports/stm32f10x/drivers/src/stm32f10x_pwr.c
        ports/stm32f10x/drivers/src/stm32f10x_rcc.c
        ports/stm32f10x/drivers/src/stm32f10x_rtc.c
        ports/stm32f10x/drivers/src/stm32f10x_sdio.c
        ports/stm32f10x/drivers/src/stm32f10x_spi.c
        ports/stm32f10x/drivers/src/stm32f10x_tim.c
        ports/stm32f10x/drivers/src/stm32f10x_usart.c
        ports/stm32f10x/drivers/src/stm32f10x_wwdg.c
        ports/stm32f10x/automac.c
        ports/stm32f10x/automac.h
        ports/stm32f10x/bacnet.c
        ports/stm32f10x/bacnet.h
        ports/stm32f10x/bo.c
        ports/stm32f10x/device.c
        ports/stm32f10x/dlmstp.c
        ports/stm32f10x/hardware.h
        ports/stm32f10x/led.c
        ports/stm32f10x/led.h
        ports/stm32f10x/main.c
        ports/stm32f10x/rs485.c
        ports/stm32f10x/rs485.h
        ports/stm32f10x/stm32f10x_conf.h
        ports/stm32f10x/stm32f10x_it.c
        ports/stm32f10x/stm32f10x_it.h
        ports/stm32f10x/system_stm32f10x.c
        ports/stm32f10x/timer.c
        ports/stm32f10x/timer.h
        ports/stm32f10x/timer_sys.c
        ports/win32/bip-init.c
        ports/win32/bip6.c
        ports/win32/dlmstp-mm.c
        ports/win32/dlmstp.c
        ports/win32/ethernet.c
        ports/win32/main.c
        ports/win32/net.h
        ports/win32/rs485.c
        ports/win32/rs485.h
        ports/win32/rx_fsm.c
        ports/win32/stdbool.h
        ports/win32/stdint.h
        ports/win32/timer.c
        ports/win32/timer.h
        ports/xplained/ASF/common/boards/board.h
        ports/xplained/ASF/common/drivers/nvm/xmega/xmega_nvm.c
        ports/xplained/ASF/common/drivers/nvm/common_nvm.h
        ports/xplained/ASF/common/services/clock/xmega/osc.h
        ports/xplained/ASF/common/services/clock/xmega/pll.h
        ports/xplained/ASF/common/services/clock/xmega/sysclk.c
        ports/xplained/ASF/common/services/clock/xmega/sysclk.h
        ports/xplained/ASF/common/services/clock/genclk.h
        ports/xplained/ASF/common/services/clock/osc.h
        ports/xplained/ASF/common/services/clock/pll.h
        ports/xplained/ASF/common/services/clock/sysclk.h
        ports/xplained/ASF/common/services/delay/xmega/cycle_counter.h
        ports/xplained/ASF/common/services/delay/delay.h
        ports/xplained/ASF/common/services/gpio/xmega_gpio/xmega_gpio.h
        ports/xplained/ASF/common/services/gpio/gpio.h
        ports/xplained/ASF/common/services/ioport/xmega/ioport.h
        ports/xplained/ASF/common/services/ioport/xmega/ioport_compat.c
        ports/xplained/ASF/common/services/ioport/xmega/ioport_compat.h
        ports/xplained/ASF/common/services/ioport/ioport.h
        ports/xplained/ASF/common/services/serial/xmega_usart/usart_serial.h
        ports/xplained/ASF/common/services/serial/serial.h
        ports/xplained/ASF/common/services/serial/usart_serial.c
        ports/xplained/ASF/common/services/sleepmgr/xmega/sleepmgr.c
        ports/xplained/ASF/common/services/sleepmgr/xmega/sleepmgr.h
        ports/xplained/ASF/common/services/sleepmgr/sleepmgr.h
        ports/xplained/ASF/common/utils/interrupt/interrupt_avr8.h
        ports/xplained/ASF/common/utils/stdio/stdio_serial/stdio_serial.h
        ports/xplained/ASF/common/utils/stdio/read.c
        ports/xplained/ASF/common/utils/stdio/write.c
        ports/xplained/ASF/common/utils/interrupt.h
        ports/xplained/ASF/common/utils/parts.h
        ports/xplained/ASF/xmega/boards/xmega_a3bu_xplained/init.c
        ports/xplained/ASF/xmega/boards/xmega_a3bu_xplained/led.h
        ports/xplained/ASF/xmega/boards/xmega_a3bu_xplained/xmega_a3bu_xplained.h
        ports/xplained/ASF/xmega/drivers/adc/xmega_aau/adc_aau.c
        ports/xplained/ASF/xmega/drivers/adc/adc.c
        ports/xplained/ASF/xmega/drivers/adc/adc.h
        ports/xplained/ASF/xmega/drivers/cpu/ccp.h
        ports/xplained/ASF/xmega/drivers/cpu/xmega_reset_cause.h
        ports/xplained/ASF/xmega/drivers/nvm/nvm.c
        ports/xplained/ASF/xmega/drivers/nvm/nvm.h
        ports/xplained/ASF/xmega/drivers/pmic/pmic.h
        ports/xplained/ASF/xmega/drivers/rtc32/rtc32.c
        ports/xplained/ASF/xmega/drivers/rtc32/rtc32.h
        ports/xplained/ASF/xmega/drivers/sleep/sleep.h
        ports/xplained/ASF/xmega/drivers/tc/tc.c
        ports/xplained/ASF/xmega/drivers/tc/tc.h
        ports/xplained/ASF/xmega/drivers/twi/twi_common.h
        ports/xplained/ASF/xmega/drivers/twi/twim.c
        ports/xplained/ASF/xmega/drivers/twi/twim.h
        ports/xplained/ASF/xmega/drivers/twi/twis.c
        ports/xplained/ASF/xmega/drivers/twi/twis.h
        ports/xplained/ASF/xmega/drivers/usart/usart.c
        ports/xplained/ASF/xmega/drivers/usart/usart.h
        ports/xplained/ASF/xmega/drivers/wdt/wdt.c
        ports/xplained/ASF/xmega/drivers/wdt/wdt.h
        ports/xplained/ASF/xmega/services/pwm/pwm.c
        ports/xplained/ASF/xmega/services/pwm/pwm.h
        ports/xplained/ASF/xmega/services/timeout/timeout.c
        ports/xplained/ASF/xmega/services/timeout/timeout.h
        ports/xplained/ASF/xmega/utils/assembler/gas.h
        ports/xplained/ASF/xmega/utils/bit_handling/clz_ctz.h
        ports/xplained/ASF/xmega/utils/preprocessor/mrepeat.h
        ports/xplained/ASF/xmega/utils/preprocessor/preprocessor.h
        ports/xplained/ASF/xmega/utils/preprocessor/stringz.h
        ports/xplained/ASF/xmega/utils/preprocessor/tpaste.h
        ports/xplained/ASF/xmega/utils/assembler.h
        ports/xplained/ASF/xmega/utils/compiler.h
        ports/xplained/ASF/xmega/utils/progmem.h
        ports/xplained/ASF/xmega/utils/status_codes.h
        ports/xplained/config/conf_adc.h
        ports/xplained/config/conf_board.h
        ports/xplained/config/conf_clock.h
        ports/xplained/config/conf_nvm.h
        ports/xplained/config/conf_rtc32.h
        ports/xplained/config/conf_sleepmgr.h
        ports/xplained/config/conf_timeout.h
        ports/xplained/config/conf_twim.h
        ports/xplained/config/conf_usart_serial.h
        ports/xplained/adc-hdw.c
        ports/xplained/adc-hdw.h
        ports/xplained/ai.c
        ports/xplained/asf.h
        ports/xplained/bacnet.c
        ports/xplained/bacnet.h
        ports/xplained/bname.c
        ports/xplained/bname.h
        ports/xplained/device.c
        ports/xplained/dlmstp.c
        ports/xplained/led.c
        ports/xplained/led.h
        ports/xplained/main.c
        ports/xplained/nvmdata.c
        ports/xplained/nvmdata.h
        ports/xplained/rs485.c
        ports/xplained/rs485.h
        ports/xplained/stack.c
        ports/xplained/stack.h
        ports/xplained/timer.c
        ports/xplained/timer.h
        ports/xplained/timer1.c
        src/abort.c
        src/access_rule.c
        src/address.c
        src/alarm_ack.c
        src/apdu.c
        src/arf.c
        src/assigned_access_rights.c
        src/authentication_factor.c
        src/authentication_factor_format.c
        src/awf.c
        src/bacaddr.c
        src/bacapp.c
        src/bacdcode.c
        src/bacdevobjpropref.c
        src/bacerror.c
        src/bacint.c
        src/bacprop.c
        src/bacpropstates.c
        src/bacreal.c
        src/bacsec.c
        src/bacstr.c
        src/bactext.c
        src/bactimevalue.c
        src/bigend.c
        src/bip.c
        src/bvlc.c
        src/bvlc6.c
        src/cov.c
        src/crc.c
        src/credential_authentication_factor.c
        src/datalink.c
        src/datetime.c
        src/dcc.c
        src/debug.c
        src/event.c
        src/fifo.c
        src/filename.c
        src/get_alarm_sum.c
        src/getevent.c
        src/iam.c
        src/ihave.c
        src/indtext.c
        src/key.c
        src/keylist.c
        src/lighting.c
        src/lso.c
        src/memcopy.c
        src/mstp.c
        src/mstptext.c
        src/npdu.c
        src/proplist.c
        src/ptransfer.c
        src/rd.c
        src/readrange.c
        src/reject.c
        src/ringbuf.c
        src/rp.c
        src/rpm.c
        src/sbuf.c
        src/timestamp.c
        src/timesync.c
        src/tsm.c
        src/ucix.c
        src/version.c
        src/vmac.c
        src/whohas.c
        src/whois.c
        src/wp.c
        src/wpm.c
        test/ctest.c
        test/ctest.h)

include_directories(include
        demo/object
        ports/linux)

add_executable(bacnet_stack ${SOURCE_FILES})